# rpi-ros2-hmi-panel

./: .gitattributes  .gitignore  AGENTS.md  README.md
.tasks/: rpi-ros2-hmi-panel.md
deployment/scripts/: build_on_rpi.sh  manual_panel_test.sh  source_workspace.bash
src/panel_bringup/: CMakeLists.txt  package.xml
src/panel_bringup/config/: panel.yaml
src/panel_bringup/launch/: panel.launch.py
src/panel_bringup/systemd/: rpi-ros2-hmi-panel.service
src/panel_interfaces/: CMakeLists.txt  package.xml
src/panel_interfaces/msg/: PanelState.msg
src/panel_interfaces/srv/: GetPanelState.srv  SetPanelState.srv
src/panel_nodes/: CMakeLists.txt  package.xml
src/panel_nodes/include/rpi_ros2_hmi_panel/: json_protocol.hpp  panel_state.hpp  touch_debounce.hpp  touch_layout.hpp  touch_processor.hpp
src/panel_nodes/src/: ethernet_state_server_node.cpp  json_protocol.cpp  state_manager_node.cpp  touch_debounce.cpp  touch_layout.cpp  touch_processor.cpp  touchscreen_hmi_node.cpp
src/panel_nodes/test/: core_tests.cpp
