<?xml version="1.0"?>
<package format="3">
  <name>panel_nodes</name>
  <version>0.1.0</version>
  <description>ROS 2 C++ nodes for the Raspberry Pi touchscreen HMI panel.</description>
  <maintainer email="erd@raspberrypi-jz.local">erd</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>panel_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nlohmann-json3-dev</depend>
  <depend>libsdl2-dev</depend>

  <test_depend>ament_cmake_gtest</test_depend>
</package>
